kube-postgres/ps-patroni.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: patroni
spec:
  serviceName: "etcd"
  replicas: 1
  template:
    metadata:
      labels:
        app: patroni
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      containers:
      - command:
        - /bin/sh
        - -ec
        - |
          [...]
        image: gcr.io/google_containers/etcd-amd64:2.2.5
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -ec
              - |
                EPS=""
                for i in $(seq 0 $((${INITIAL_CLUSTER_SIZE} - 1))); do
                    EPS="${EPS}${EPS:+,}http://${HOSTNAME/-*/}-${i}.${SET_NAME}.${POD_NS}.svc.cluster.local:2379"
                done

                HOSTNAME=$(hostname)

                member_hash() {
                    etcdctl member list | grep http://${HOSTNAME}.${SET_NAME}.${POD_NS}.svc.cluster.local:2380 | cut -d':' -f1 | cut -d'[' -f1
                }

                echo "Removing ${HOSTNAME} from etcd cluster"

                ETCDCTL_ENDPOINT=${EPS} etcdctl member remove $(member_hash)
                if [ $? -eq 0 ]; then
                    # Remove everything otherwise the cluster will no longer scale-up
                    rm -rf /var/run/etcd/*
                fi
        name: etcd
        ports:
        - containerPort: 2380
          name: peer
          protocol: TCP
        - containerPort: 2379
          name: client
          protocol: TCP
        livenessProbe: &healthcheck
          tcpSocket:
            port: 2379
        readinessProbe:
          <<: *healthcheck
        volumeMounts:
        - mountPath: /var/run/etcd
          name: data


      #patroni
      - env:
        - name: PGPASSWORD_SUPERUSER
          valueFrom:
            secretKeyRef:
              key: password-superuser
              name: patroni
        - name: PGPASSWORD_ADMIN
          valueFrom:
            secretKeyRef:
              key: password-admin
              name: patroni
        - name: PGPASSWORD_STANDBY
          valueFrom:
            secretKeyRef:
              key: password-standby
              name: patroni
        - name: SCOPE
          value: patroni
        - name: USE_WALE
        - name: PGROOT
          value: /home/postgres/pgdata/pgroot
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: ETCD_HOST
          value: etcd.$(POD_NAMESPACE):2379
        - name: CALLBACK_SCRIPT
          value: callback_role.py
        - name: CRONTAB
          valueFrom:
            configMapKeyRef:
              name: globalvalues
              key: POSTGRES_CRON           
        image: registry.opensource.zalan.do/acid/spilo-9.6:1.2-p17
        imagePullPolicy: Always
        name: patroni
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/sh
              - -ec
              - |
                apt-get update && apt-get install at && atd
                echo "pg_restore -cCOd postgres /mnt/tylt-pg-prod/${PG_BACKUP_FILE}.dump -U postgres --verbose" | at now + 1 min
          preStop:
            exec:
              command:
              - /bin/sh
              - -ec
              - |
                echo "Dump" > /mnt/tylt-pg-prod/test.txt
        ports:
        - containerPort: 8008
          protocol: TCP
        - containerPort: 5432
          protocol: TCP
        livenessProbe: &healthcheck
          tcpSocket:
            port: 5432
        readinessProbe:
          <<: *healthcheck
        volumeMounts:
        - mountPath: /home/postgres/data
          name: storage-volume
        - mountPath: /etc/patroni
          name: patroni-config
          readOnly: true
        - name: podinfo
          mountPath: /mnt/podinfo
          readOnly: false
        - name: backup-dir
          mountPath: /mnt/tylt-pg-prod
          readOnly: PRODUCTION_VAR

      #adminer
      - image: clue/adminer
        name: adminer
        ports:
        - containerPort: 80
        livenessProbe: &healthcheck
          tcpSocket:
            port: 80
        readinessProbe:
          <<: *healthcheck

      volumes:
      - name: data
        emptyDir: {}
      - name: patroni-config
        secret:
          secretName: patroni
      - name:  storage-volume
        emptyDir: {}
      - name: podinfo
        downwardAPI:
          items:
            - path: "labels"
              fieldRef:
                fieldPath: metadata.labels
            - path: "annotations"
              fieldRef:
                fieldPath: metadata.annotations
      - name: backup-dir
        hostPath:
          path: /mnt/s3-backup-share/tylt-pg-prod
