kube-postgres/svc-patroni-etcd.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: etcd
  labels:
    app: etcd
spec:
  ports:
    - name: peer
      port: 2380
    - name: client
      port: 2379
  clusterIP: None
  selector:
    app: patroni
