kube-postgres/svc-patroni-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: patroni
  labels:
    app: patroni
spec:
  ports:
    - name: patroni
      port: 5432
    - name: http
      port: 8008
    - name: adminer
      port: 80
  clusterIP: None
  selector:
    app: patroni
    spilo-role: master
