kube-postgres/svc-patroni-replica.yaml
apiVersion: v1
kind: Service
metadata:
  name: patroni-nodes
  labels:
    app: patroni
spec:
  ports:
    - name: patroni
      port: 5432
    - name: http
      port: 8008
  clusterIP: None
  selector:
    app: patroni
