kube-postgres/ingress-patroni.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: patroni 
spec:
  rules:
  - host: patroni.NAMESPACE_VAR.kubernetes.thetylt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: patroni
          servicePort: 80
